<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_screen">

        <ImageView
            android:id="@+id/imglogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/imglogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/human" />
        <TextView
            android:id="@+id/Appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginEnd="177dp"
            android:text="@string/Appname"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imglogo" />
        <TextView
            android:id="@+id/textdeliver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="177dp"
            android:text="@string/textdeliver"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Appname" />
        <TextView
            android:id="@+id/logintitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logintitle"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textdeliver"
            app:layout_constraintHorizontal_bias="0.554"
            app:layout_constraintStart_toStartOf="@+id/textdeliver"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="219dp" />
        <EditText
            android:id="@+id/email"
            android:layout_width="325dp"
            android:layout_height="57dp"
            android:layout_marginTop="88dp"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/envelope"
            android:drawablePadding="15dp"
            android:elevation="10dp"
            android:fontFamily="@font/lato"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:textAlignment="gravity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logintitle" />
        <EditText
            android:id="@+id/password"
            android:layout_width="325dp"
            android:layout_height="57dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="15dp"
            android:elevation="10dp"
            android:fontFamily="@font/lato"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="152dp"
            android:layout_height="57dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/coloyellow"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/tvlogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/lato"
            android:text="@string/newa"
            android:textColor="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.561"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
