<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">


        <ImageView
            android:id="@+id/imglogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/imglogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/human" />
        <TextView
            android:id="@+id/Appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginEnd="177dp"
            android:text="@string/Appname"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imglogo" />
        <TextView
            android:id="@+id/textdeliver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginEnd="177dp"
            android:text="@string/textdeliver"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Appname" />
        <TextView
            android:id="@+id/SignTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sign_up_here"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textdeliver"
            app:layout_constraintStart_toStartOf="@+id/textdeliver"
            app:layout_constraintTop_toBottomOf="@+id/textdeliver"
            tools:ignore="TextContrastCheck" />
        <EditText
            android:id="@+id/userName"
            android:layout_width="325dp"
            android:layout_height="57dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="15dp"
            android:elevation="10dp"
            android:fontFamily="@font/lato"
            android:hint="@string/userName"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:textAlignment="gravity"
            app:layout_constraintEnd_toEndOf="@+id/SignTitle"
            app:layout_constraintStart_toStartOf="@+id/SignTitle"
            app:layout_constraintTop_toBottomOf="@+id/SignTitle"
            tools:ignore="DuplicateClickableBoundsCheck" />
        <EditText
            android:id="@+id/email"
            android:layout_width="325dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/envelope"
            android:drawablePadding="15dp"
            android:elevation="10dp"
            android:fontFamily="@font/lato"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:textAlignment="gravity"
            app:layout_constraintEnd_toEndOf="@+id/userName"
            app:layout_constraintStart_toStartOf="@+id/userName"
            app:layout_constraintTop_toBottomOf="@+id/userName" />
        <EditText
            android:id="@+id/phone"
            android:layout_width="325dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/baseline_call_24"
            android:drawablePadding="15dp"
            android:elevation="10dp"
            android:fontFamily="@font/lato"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingLeft="15dp"
            android:textAlignment="gravity"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />
        <EditText
            android:id="@+id/password"
            android:layout_width="325dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="15dp"
            android:elevation="10dp"
            android:fontFamily="@font/lato"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            tools:ignore="MissingConstraints" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register"
            android:layout_width="152dp"
            android:layout_height="57dp"
            android:layout_marginStart="131dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="131dp"
            android:background="@drawable/coloyellow"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
             />
        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:fontFamily="@font/lato"
            android:text="@string/account"
            android:textColor="@color/yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register"
            tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>
