<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"

    tools:context=".Profile_Screen">

<LinearLayout
android:id="@+id/ageLayout"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintTop_toTopOf="parent"
app:layout_constraintBottom_toTopOf="@+id/bmiLayout"
android:padding="16dp">

<TextView
    android:id="@+id/calculateAge"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/calculateAge"
    android:textSize="24sp"
    android:gravity="center" />

<Button
    android:id="@+id/Age_btn"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/Age_btn"
    android:textSize="20sp"
    android:backgroundTint="@color/yellow"
    android:textColor="#FFFFFF" />
</LinearLayout>

<LinearLayout
android:id="@+id/bmiLayout"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintTop_toBottomOf="@+id/ageLayout"
app:layout_constraintBottom_toBottomOf="parent"
android:padding="16dp">

<Button
    android:id="@+id/Bmi_btn"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/Bmi_btn"
    android:textSize="20sp"
    android:backgroundTint="@color/yellow"
    android:textColor="#FFFFFF" />

<TextView
    android:id="@+id/calculateBmi"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/calculateBmi"
    android:textSize="24sp"
    android:gravity="center" />
</LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
